# controllers/order.controller.js
@@ -1,11 +1,19 @@
 const orderService = require("../services/order.services");
 const rs = require("../helpers/error");
-
+const {
+  orderId,
+  paymentMethod,
+  amount,
+  status,
+} = require("../validations/order.validation");
+const validator = require("../helpers/validator");
 module.exports = {
   index: async (req, res) => {
     try {
-      const response = await orderService.index();
-
+      if (!req.user) {
+        rs.unauthorized(res, "Unauthorized");
+      }
+      const response = await orderService.index(req.user);
       if (response.error) {
         return rs.error(res, response.error);
       }
@@ -18,8 +26,11 @@ module.exports = {
   },
   show: async (req, res) => {
     try {
-      const orderId = req.params.orderId;
-      const response = await orderService.show(orderId);
+      const { error } = validator({ orderId }, req.params);
+      if (error) {
+        return rs.validate(res, error.details[0].message);
+      }
+      const response = await orderService.show(req.params);
       if (response.error) {
         return rs.error(res, response.error);
       }
@@ -32,7 +43,14 @@ module.exports = {
   },
   create: async (req, res) => {
     try {
-      const response = await orderService.create(req.body);
+      if (!req.user) {
+        rs.unauthorized(res, "Unauthorized");
+      }
+      const { error } = validator({ paymentMethod, amount }, req.body);
+      if (error) {
+        return rs.validate(res, error.details[0].message);
+      }
+      const response = await orderService.create({ ...req.body, ...req.user });
       if (response.error) {
         return rs.error(res, response.error);
       }
@@ -45,8 +63,23 @@ module.exports = {
   },
   update: async (req, res) => {
     try {
-      const orderId = req.params.orderId;
-      const response = await orderService.update(orderId);
+      if (!req.user) {
+        rs.unauthorized(res, "Unauthorized");
+      }
+      const { error } = validator(
+        { orderId, status },
+        {
+          ...req.params,
+          ...req.query,
+        }
+      );
+      if (error) {
+        return rs.validate(res, error.details[0].message);
+      }
+      const response = await orderService.update({
+        ...req.params,
+        ...req.query,
+      });
       if (response.error) {
         return rs.error(res, response.error);
       }
@@ -59,13 +92,19 @@ module.exports = {
   },
   destroy: async (req, res) => {
     try {
-      const orderId = req.params.orderId;
-      const response = await orderService.destroy(orderId);
+      const { error } = validator({ orderId }, req.params);
+      if (error) {
+        return rs.validate(res, error.details[0].message);
+      }
+      const response = await orderService.destroy({
+        ...req.params,
+        ...req.user,
+      });
       if (response.error) {
         return rs.error(res, response.error);
       }
       if (response) {
-        return rs.ok(res, response);
+        return rs.success(res, response);
       }
     } catch (error) {
       return rs.error(res, error.message);
