# routes/order.route.js
@@ -3,14 +3,9 @@ const router = express.Router();
 const orderController = require("../controllers/order.controller");
 const { auth, admin } = require("../middleware/auth");
 
-// router.get("/", [auth], orderController.index);
-// router.get("/:orderId", [auth], orderController.show);
-// router.get("create", [auth], orderController.create);
-// router.put("/update/:orderId", [auth, admin], orderController.update);
-// router.delete("/delete/:orderId", [auth], orderController.destroy);
-router.get("/", orderController.index);
-router.get("/:orderId", orderController.show);
-router.get("create", orderController.create);
-router.put("/update/:orderId", orderController.update);
-router.delete("/delete/:orderId", orderController.destroy);
+router.get("/", [auth], orderController.index);
+router.get("/:orderId", [auth], orderController.show);
+router.post("/create", [auth], orderController.create);
+router.put("/update/:orderId", [auth, admin], orderController.update);
+router.delete("/delete/:orderId", [auth], orderController.destroy);
 module.exports = router;
